--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,3 +3,37 @@
 {% block head %}
 <title>IOU</title>
 {% endblock %}
+
+{% block body %}
+<br><br><br>
+<div class="row">
+  <div class="small-2 columns small-push-5">
+    <p>Welcome to IOU!</p>
+  </div>
+</div>
+<br><br><hr><br><br>
+<div class="row">
+  <div class="small-3 columns small-push-2">
+    <br><br>
+    <p>The fastest way to mark down who owes you money - and who you owe money.</p>
+    <br>
+    <p class="smalltext">Coming soon to iOS and Android.</p>
+    <br>
+  </div>
+</div>
+<br><br><hr><br><br>
+<div class="row">
+  <div class="small-6 columns small-push-3">
+    <br><br>
+    <p>To create, alter, or complete an IOU, both parties must press the confirm button within thirty seconds.</p>
+    <br>
+  </div>
+</div>
+<br><br><hr><br><br>
+<div class="row">
+  <div class="small-3 columns small-push-7">
+    <p class="largetext">Get started today.</p>
+    <a class="button large" href="/register">Sign up</a>
+  </div>
+</div>
+{% endblock %}
