--- a/templates/base.html
+++ b/templates/base.html
@@ -9,39 +9,41 @@
     {% block head %}
     {% endblock %}
   </head>
-  <div class="row">
-    <div class="top-bar">
-      <div class="top-bar-title">
-	<span>
-	  <a class="menu-icon dark"></a>
-	</span>
-	<strong>IOU</strong>
-      </div>
-      <div id="responsive-menu">
-	<div class="top-bar-left">
-	  <ul class="dropdown menu" data-dropdown-menu>
-	    <li>
-	      <a href="#">One</a>
-	      <ul class="menu vertical">
-		<li><a href="#">1</a></li>
-		<li><a href="#">2</a></li>
-		<li><a href="#">3</a></li>
-	      </ul>
-	    </li>
-	    <li><a href="#">Two</a></li>
-	    <li><a href="#">Three</a></li>
-	  </ul>
+  <body>
+  <div class="top">
+    <div class="row">
+      <div class="top-bar">
+	<div class="top-bar-title">
+	  <span>
+	    <a class="menu-icon dark"></a>
+	  </span>
+	  <strong>IOU</strong>
 	</div>
-	<div class="top-bar-right">
-	  <ul class="menu">
-	    <li><input type="search" placeholder="Search"></li>
-	    <li><button type="button" class="button">Search</button></li>
-	  </ul>
+	<div id="responsive-menu">
+	  <div class="top-bar-left">
+	    <ul class="dropdown menu" data-dropdown-menu>
+	      <li>
+		<a href="#">One</a>
+		<ul class="menu vertical">
+		  <li><a href="#">1</a></li>
+		  <li><a href="#">2</a></li>
+		  <li><a href="#">3</a></li>
+		</ul>
+	      </li>
+	      <li><a href="#">Two</a></li>
+	      <li><a href="#">Three</a></li>
+	    </ul>
+	  </div>
+	  <div class="top-bar-right">
+	    <ul class="menu">
+	      <li><input type="search" placeholder="Search"></li>
+	      <li><button type="button" class="button">Search</button></li>
+	    </ul>
+	  </div>
 	</div>
       </div>
     </div>
   </div>
-  <body>
     {% block body %}
     {% endblock %}
     <script src="../static/js/vendor/jquery.js"></script>
