--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,6 +11,11 @@
     <p>Welcome to IOU!</p>
   </div>
 </div>
+<div class="row">
+  <div class="small-2 columns small-push-5">
+    <img src="../static/img/456x812.png">
+  </div>
+</div>
 <br><br><hr><br><br>
 <div class="row">
   <div class="small-3 columns small-push-2">
@@ -20,20 +25,32 @@
     <p class="smalltext">Coming soon to iOS and Android.</p>
     <br>
   </div>
+  <div class="small-2 columns small-pull-3">
+    <img src="../static/img/456x812.png">
+  </div>
 </div>
 <br><br><hr><br><br>
 <div class="row">
   <div class="small-6 columns small-push-3">
-    <br><br>
     <p>To create, alter, or complete an IOU, both parties must press the confirm button within thirty seconds.</p>
     <br>
   </div>
 </div>
+<div class="row">
+  <div class="small-2 columns small-push-5">
+    <img src="../static/img/456x812.png">
+  </div>
+</div>
 <br><br><hr><br><br>
 <div class="row">
-  <div class="small-3 columns small-push-7">
+  <div class="small-2 columns small-push-2">
+    <img src="../static/img/456x812.png">
+  </div>
+  <div class="small-3 columns small-pull-2">
+    <br><br><br>
     <p class="largetext">Get started today.</p>
     <a class="button large" href="/register">Sign up</a>
   </div>
 </div>
+<br><br>
 {% endblock %}
