finished base, began landing

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/foundation.css">
     <link rel="stylesheet" href="../static/css/app.css">
-    {% block head %}
-    {% endblock %}
   </head>
   <body>
   <div class="top">
@@ -36,7 +34,7 @@
 	  </div>
 	  <div class="top-bar-right">
 	    <ul class="menu">
-	      <li><a class="button" href="/register">Sign up</a></li>
+	      <li><a class="button" href="/register">Log in</a></li>
 	    </ul>
 	  </div>
 	</div>
