--- a/templates/landing.html
+++ b/templates/landing.html
@@ -47,9 +47,9 @@
     <img src="../static/img/456x812.png">
   </div>
   <div class="small-3 columns small-pull-2">
-    <br><br><br>
-    <p class="largetext">Get started today.</p>
-    <a class="button large" href="/register">Sign up</a>
+    <br><br><br><br>
+    <a class="button large" href="/register">Get started</a>
+    <p class="smalltext">Have an account already? <a href="/login">Log in.</a></p>
   </div>
 </div>
 <br><br>
