--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,8 @@
 	      <li><a href="#">Three</a></li>
 	    </ul>
 	  </div>
-	  <div class="top-bar-right">
-	    <ul class="menu">
-	      <li><a class="button" href="/register">Log in</a></li>
-	    </ul>
-	  </div>
+	  {% block topbar_right %}
+	  {% endblock %}
 	</div>
       </div>
     </div>
