--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,56 +1,65 @@
 {% extends "base.html" %}
 
-{% block head %}
-<title>IOU</title>
+{% block topbar_right %}
+<div class="top-bar-right">
+  <ul class="menu">
+    <li><a class="button" href="/register">Register</a></li>
+    <li><a class="button" href="/login">Log in</a></li>
+  </ul>
+</div>
 {% endblock %}
 
 {% block body %}
 <br><br><br>
 <div class="row">
-  <div class="small-2 columns small-push-5">
-    <p>Welcome to IOU!</p>
-  </div>
-</div>
-<div class="row">
-  <div class="small-2 columns small-push-5">
-    <img src="../static/img/456x812.png">
-  </div>
-</div>
-<br><br><hr><br><br>
-<div class="row">
-  <div class="small-3 columns small-push-2">
+  <div class="small-8 columns small-push-2">
+    <div class="row">
+      <div class="small-2 columns small-push-5">
+	<p>Welcome to IOU!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-4 columns small-push-4">
+	<img src="../static/img/456x812.png">
+      </div>
+    </div>
+    <br><br><hr><br><br>
+    <div class="row">
+      <div class="small-3 columns small-push-2">
+	<br><br>
+	<p>The fastest way to mark down who owes you money - and who you owe money.</p>
+	<br>
+	<p class="smalltext">Coming soon to iOS and Android.</p>
+	<br>
+      </div>
+      <div class="small-3 columns small-pull-3">
+	<img src="../static/img/456x812.png">
+      </div>
+    </div>
+    <br><br><hr><br><br>
+    <div class="row">
+      <div class="small-6 columns small-push-3">
+	<p>To create, alter, or complete an IOU, both parties must press the confirm button within thirty seconds.</p>
+	<br>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-4 columns small-push-4">
+	<img src="../static/img/456x812.png">
+      </div>
+    </div>
+    <br><br><hr><br><br>
+    <div class="row">
+      <div class="small-3 columns small-push-2">
+	<img src="../static/img/456x812.png">
+      </div>
+      <div class="small-3 columns small-pull-3">
+	<br><br><br><br>
+	<a class="button large" href="/register">Get started</a>
+	<p class="smalltext">Have an account already? <a href="/login">Log in.</a></p>
+      </div>
+    </div>
     <br><br>
-    <p>The fastest way to mark down who owes you money - and who you owe money.</p>
-    <br>
-    <p class="smalltext">Coming soon to iOS and Android.</p>
-    <br>
-  </div>
-  <div class="small-2 columns small-pull-3">
-    <img src="../static/img/456x812.png">
   </div>
 </div>
-<br><br><hr><br><br>
-<div class="row">
-  <div class="small-6 columns small-push-3">
-    <p>To create, alter, or complete an IOU, both parties must press the confirm button within thirty seconds.</p>
-    <br>
-  </div>
-</div>
-<div class="row">
-  <div class="small-2 columns small-push-5">
-    <img src="../static/img/456x812.png">
-  </div>
-</div>
-<br><br><hr><br><br>
-<div class="row">
-  <div class="small-2 columns small-push-2">
-    <img src="../static/img/456x812.png">
-  </div>
-  <div class="small-3 columns small-pull-2">
-    <br><br><br><br>
-    <a class="button large" href="/register">Get started</a>
-    <p class="smalltext">Have an account already? <a href="/login">Log in.</a></p>
-  </div>
-</div>
-<br><br>
 {% endblock %}
