New finished, beginning home

--- a/templates/new.html
+++ b/templates/new.html
@@ -3,6 +3,7 @@
 {% block topbar_right %}
 <div class="top-bar-right">
   <ul class="menu">
+  	<li><a class="button" href="/home">Home</a></li>
     <li><a class="button" href="/logout">Log out</a></li>
   </ul>
 </div>
@@ -82,7 +83,7 @@
   </div>
   <div class="row">
     <div class="small-2 columns small-push-5">
-		<button class="button" name="register" type="submit">Register</button>
+		<button class="button" name="register" type="submit">Create</button>
 	</div>
 	<div class="small-2 columns small-pull-4">
 		<button class="button" type="reset">Clear</button>
