--- a/templates/new.html
+++ b/templates/new.html
@@ -39,13 +39,9 @@
   <div class="row">
 	<div class="small-6 columns small-push-3">
 	  <label>How much money was borrowed?
-	  	<div class="row">
-	  		<div class="small-1 columns">
-	  			<span class="prefix">$</span>
-	  		</div>
-	  		<div class="small-11 columns">
-				<input type="number" placeholder="20" name="amount">
-			</div>
+	  	<div class="input-group">
+	  		<span class="input-group-label">$</span>
+			<input class="input-group-field" type="number" placeholder="20" name="amount">
 		</div>
 	  </label>
 	  <hr>
