--- a/templates/home.html
+++ b/templates/home.html
@@ -24,10 +24,18 @@
 				<a class="button" href="/new">Create one!</a>
 			{% else %}
 				{% for iou in iouList %}
-					{% if iou[4] == userID %}
-						<p>You lent ${{iou[1]}} to {{iou[5]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[10]}})</p>
+					{% if iou[6] == "lend" %}
+						{% if iou[7] == "account" %}
+							<p>You lent ${{iou[1]}} to {{users.get_user_by_id(iou[5])["username"]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+						{% else %}
+							<p>You lent ${{iou[1]}} to {{iou[5]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+						{% endif %}
 					{% else %}
-						<p>You borrowed ${{iou[1]}} from {{iou[5]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[10]}})</p>
+						{% if iou[7] == "account" %}
+							<p>You borrowed ${{iou[1]}} from {{users.get_user_by_id(iou[5])["username"]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+						{% else %}
+							<p>You borrowed ${{iou[1]}} from {{iou[5]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+						{% endif %}
 					{% endif %}
 				{% endfor %}
 			{% endif %}
