--- a/templates/home.html
+++ b/templates/home.html
@@ -18,23 +18,24 @@
 		<div class="callout">
 			<span class="smalltext float-left">Recent IOUs</span>
 			<span class="smalltext float-right"><a href="/ious">Details</a></span>
-			<hr>
-			{% if iouList is none %}
+			{% if iouList == [] %}
+				<hr>
 				<p>You don't have any IOUs.<p>
 				<a class="button" href="/new">Create one!</a>
 			{% else %}
 				{% for iou in iouList %}
+					<hr>
 					{% if iou[6] == "lend" %}
 						{% if iou[7] == "account" %}
-							<p>You lent ${{iou[1]}} to {{users.get_user_by_id(iou[5])["username"]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+							<p>You lent ${{iou[1]}} to {{users.get_user_by_id(iou[5])["username"]}} for {{iou[0]}} on {{iou[3]}}. (IOU ID: {{iou[9]}})</p>
 						{% else %}
-							<p>You lent ${{iou[1]}} to {{iou[5]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+							<p>You lent ${{iou[1]}} to {{iou[5]}} for {{iou[0]}} on {{iou[3]}}. (IOU ID: {{iou[9]}})</p>
 						{% endif %}
 					{% else %}
 						{% if iou[7] == "account" %}
-							<p>You borrowed ${{iou[1]}} from {{users.get_user_by_id(iou[5])["username"]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+							<p>You borrowed ${{iou[1]}} from {{users.get_user_by_id(iou[4])["username"]}} for {{iou[0]}} on {{iou[3]}}. (IOU ID: {{iou[9]}})</p>
 						{% else %}
-							<p>You borrowed ${{iou[1]}} from {{iou[5]}} on {{iou[3]}} for {{iou[0]}}. (IOU ID: {{iou[9]}})</p>
+							<p>You borrowed ${{iou[1]}} from {{iou[4]}} for {{iou[0]}} on {{iou[3]}}. (IOU ID: {{iou[9]}})</p>
 						{% endif %}
 					{% endif %}
 				{% endfor %}
