--- a/templates/base.html
+++ b/templates/base.html
@@ -11,30 +11,17 @@
   <div class="top">
     <div class="row">
       <div class="top-bar">
-	<div class="top-bar-title">
-	  <span>
-	    <a class="menu-icon dark"></a>
-	  </span>
-	  <strong>IOU</strong>
-	</div>
-	<div id="responsive-menu">
-	  <div class="top-bar-left">
-	    <ul class="dropdown menu" data-dropdown-menu>
-	      <li>
-		<a href="#">One</a>
-		<ul class="menu vertical">
-		  <li><a href="#">1</a></li>
-		  <li><a href="#">2</a></li>
-		  <li><a href="#">3</a></li>
-		</ul>
-	      </li>
-	      <li><a href="#">Two</a></li>
-	      <li><a href="#">Three</a></li>
-	    </ul>
-	  </div>
-	  {% block topbar_right %}
-	  {% endblock %}
-	</div>
+		<div id="responsive-menu">
+		  <div class="top-bar-left">
+			<ul class="dropdown menu" data-dropdown-menu>
+			  <li>
+				<a href="/"><img src="../static/img/home.png"></a>
+			  </li>
+			</ul>
+		  </div>
+		  {% block topbar_right %}
+		  {% endblock %}
+		</div>
       </div>
     </div>
   </div>
@@ -42,7 +29,7 @@
   {% endblock %}
   <footer class="footer">
     <div class="row">
-      <p class="text-center">&copy; IOU &mdash; 1.0.0</p>
+      <p class="text-center">&copy; IOweU &mdash; 1.0.0</p>
     </div>
   </footer>
   <script src="../static/js/vendor/jquery.js"></script>
