nearly done with completing/modifying

--- a/templates/complete.html
+++ b/templates/complete.html
@@ -10,7 +10,23 @@
 {% endblock %}
 
 {% block body %}
-<form action="/modcom">
+<br><br><br>
 
+<div class="row">
+	{% if info["borrowOrLend"] == "lend" %}
+		<p>You lent ${{info["amount"]}} to {{info["usernameBorrower"]}} for {{info["note"]}} on {{info["dateCreated"]}}. (IOU ID: {{info["iouID"]}})</p>
+	{% else %}
+		<p>You borrowed ${{info["amount"]}} from {{info["usernameLender"]}} for {{info["note"]}} on {{info["dateCreated"]}}. (IOU ID: {{info["iouID"]}})</p>
+	{% endif %}
+</div>
+
+<br>
+
+<form method="POST" action="/modcom">
+  	<div class="row">
+		<div class="small-2 columns small-push-5">
+			<button class="button alert expanded" name="complete" type="submit">Complete</button>
+		</div>
+	</div>
 </form>
 {% endblock %}
