--- a/templates/new.html
+++ b/templates/new.html
@@ -79,10 +79,10 @@
   </div>
   <div class="row">
     <div class="small-2 columns small-push-5">
-		<button class="button" name="register" type="submit">Create</button>
+		<button class="button expanded" name="register" type="submit">Create</button>
 	</div>
 	<div class="small-2 columns small-pull-4">
-		<button class="button" type="reset">Clear</button>
+		<button class="button expanded" type="reset">Clear</button>
     </div>
   </div>
 </form>
