--- a/templates/complete.html
+++ b/templates/complete.html
@@ -22,7 +22,7 @@
 
 <br>
 
-<form method="POST" action="/modcom">
+<form method="POST" action="/modcom/{{info['iouID']}}">
   	<div class="row">
 		<div class="small-2 columns small-push-5">
 			<button class="button alert expanded" name="complete" type="submit">Complete</button>
